--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
             <canvas id="average-price-chart" ></canvas>
         </div>
     </div>
+    <div>
+        <canvas id = "myChart"></canvas>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    </div>
     <!-- Our JavaScript Code  -->
     <script src="mockData.js"></script>
     <script src="index.js"></script>
